# data-in-cloud

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.local.yaml  docker-compose.yaml
db/mongo/collection/: Cargo.toml
db/mongo/collection/src/: lib.rs  tests.rs  user.rs  user_repo_info.rs  utils.rs
db/mongo/collection/src/utils/: mod.rs  tests.rs
db/mongo/schema/: Cargo.toml
db/mongo/schema/src/: error.rs  lib.rs  user.rs  user_repo_info.rs
db/postgres/entity/: Cargo.toml
db/postgres/entity/src/: lib.rs  mod.rs  prelude.rs  repository.rs  sea_orm_active_enums.rs
db/postgres/migration/: Cargo.toml
db/postgres/migration/src/: m20220101_000001_create_table.rs
db/repo/: Cargo.toml
db/repo/src/: lib.rs
db/repo/src/dao/: error.rs  mod.rs
db/repo/src/dao/repo_repository/: mod.rs  tests.rs
db/repo/src/dao/repository_repo/: mod.rs  tests.rs
db/repo/src/dao/user_repo/: mod.rs  tests.rs
db/repo/src/dao/user_repo_info_repository/: mod.rs
db/repo/src/dao/user_repo_repository/: mod.rs  tests.rs
db/repo/src/dao/user_repository_repo/: mod.rs  tests.rs
db/repo/src/dto/: mod.rs  repo_dto.rs  repository_dto.rs  user_dto.rs  user_repo_info_dto.rs
db/repo/src/utils/: mod.rs
db/repo/src/utils/dto/: mod.rs
db/repo/src/utils/repository/: mod.rs  repository_test_helper.rs
db/repo/src/utils/user/: mod.rs  user_test_helper.rs
db/repo/src/utils/user_repo/: mod.rs  user_repo_test_helper.rs
dto/: Cargo.toml
dto/src/: lib.rs  repo_dto.rs  user_dto.rs  user_repo_info_dto.rs  utils.rs
lab1/: .env.example  Cargo.toml  Dockerfile  docker-compose.yaml  docker-compose.yaml.local
lab1/db/entity/: Cargo.toml
lab1/db/entity/src/: lib.rs  mod.rs
lab1/db/migration/: Cargo.toml
lab1/db/migration/src/: m20220101_000001_create_table.rs
lab1/db/repo/: Cargo.toml
lab1/db/repo/src/: lib.rs
lab1/db/repo/src/dao/: error.rs  mod.rs
lab1/db/repo/src/dao/repository_repo/: mod.rs  tests.rs
lab1/db/repo/src/dto/: mod.rs  repository_dto.rs
lab1/db/repo/src/utils/: mod.rs
lab1/db/repo/src/utils/repository/: mod.rs  repository_mapper.rs  repository_test_helper.rs
lab1/src/: config.rs  db.rs  error.rs  lib.rs  main.rs
lab1/src/web/: error.rs  mod.rs  state.rs
lab1/src/web/controller/: mod.rs  repository_controller.rs
lab1/src/web/dto/: mod.rs
lab1/src/web/service/: mod.rs  repository_service.rs
lab1/src/web/utils/: mod.rs
lab1/tests/: integration_test.rs
lab1/tests/api/: mod.rs  repository_api.rs
lab1/tests/common/: mod.rs
message_broker/: Cargo.toml
message_broker/src/: error.rs  lib.rs  rabbitmq.rs  tests.rs
src/: config.rs  db.rs  error.rs  lib.rs  main.rs  message_broker.rs  runtime.rs
src/message_broker/: connection.rs  error.rs  mod.rs  rabbitmq.rs  tests.rs
src/web/: api.rs  error.rs  mod.rs  openapi.rs  state.rs
src/web/controller/: mod.rs  repo_controller.rs  repository_controller.rs  user_controller.rs  user_repo_controller.rs
src/web/controller/repo/: graphql_repo_controller.rs  mod.rs  rest_repo_controller.rs
src/web/controller/user/: graphql_user_controller.rs  mod.rs  rest_user_controller.rs
src/web/controller/user_repo/: graphql_user_repo_controller.rs  mod.rs  rest_user_repo_controller.rs
src/web/controller/user_repo_info/: graphql_user_repo_info_controller.rs  mod.rs  rest_user_repo_info_controller.rs
src/web/dto/: mod.rs  user_repo_dto.rs
src/web/service/: mod.rs  repo_service.rs  repository_service.rs  user_repo_info_receiver.rs  user_repo_info_service.rs  user_repo_service.rs  user_service.rs
src/web/utils/: mod.rs  validation.rs
tests/: integration_test.rs
tests/api/: mod.rs  repo_api.rs  repository_api.rs  user_api.rs  user_repo_api.rs  user_repo_info_api.rs
tests/common/: mod.rs
tests/helpers/: mod.rs  repository_api_helper.rs  user_api_helper.rs  user_repo_api_helper.rs
