[package]
name = "message_broker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.80"
thiserror = "1.0.61"
amqprs = "1.6.0"
tokio = { version = "1.36.0", features = ["full"] }
uuid = "1.8.0"