[package]
name = "collection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.79"
mongodb = { version = "2.8.2", features = ["bson-uuid-1"] }
chrono = { version = "0.4.37", features = ["serde"]}
bson = "2.10.0"
serde = "1.0.197"
futures-util = "0.3.30"
uuid = { version = "1.8.0", features = ["serde"]}