[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
clap = "=4.3.1"
anstyle = "=1.0.0"
anstyle-parse = "=0.2.1"
anstyle-query = "=1.0.0"
clap_lex = "=0.5.0"
async-std = { version = "1", features = ["attributes", "tokio1"] }
sea-orm-migration = "0.12.14"
chrono = "0.4.34"
