[package]
name = "repo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entity = {path = "../entity"}
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
async-trait = "0.1.77"
uuid = { version = "1.7.0", features = ["v4"] }
sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
tokio = { version = "1.36.0", features = ["full"] }
strum = { version = "0.26.1", features = ["derive"] }
thiserror = "1.0.29"
validator = { version = "0.16.1", features = ["derive"] }
chrono = { version = "0.4.34", features = ["serde"] }

[dev-dependencies]
sea-orm = {version = "0.12", features = ["mock"]}
serial_test = "3.0.0"

